--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,58 @@
+attrs==24.2.0
+blinker==1.9.0
 Bootstrap-Flask==2.4.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+Deprecated==1.2.15
+dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.0.3
 Flask-CKEditor==0.4.6
 Flask-Gravatar==0.5.0
-Flask-Login==0.6.3
 Flask-Limiter==3.8.0
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.2.1
 fuzzywuzzy==0.18.0
+gunicorn==23.0.0
+h11==0.14.0
+idna==3.10
+importlib_resources==6.4.5
+itsdangerous==2.2.0
 Jinja2==3.1.3
+Levenshtein==0.25.1
+limits==3.13.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 marshmallow==3.21.3
+mdurl==0.1.2
+numpy==2.1.3
+ordered-set==4.1.0
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+Pygments==2.18.0
 PyJWT==2.8.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-Levenshtein==0.25.1
+pytz==2024.2
+RapidFuzz==3.10.1
 requests==2.32.3
+rich==13.9.4
+selenium==4.26.1
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.19
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+websocket-client==1.8.0
 Werkzeug==3.0.1
+wrapt==1.17.0
+wsproto==1.2.0
 WTForms==3.0.1
